Fix video on mobile devices

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -119,3 +119,15 @@ h1:after {
     text-align: center;
     padding: 20px;
 }
+
+.video-container {
+    min-width: 300px;
+    max-width: 560px;
+    margin: 0 auto;
+}
+
+
+iframe {
+    width: 100%;
+   
+}
